fix(styles): hamburger menu hover on mobile
Remove hover effect on hamburger menu icon. On Mobile phone it stayed in
the hover state after it was clicked.

--- a/components/UI/navigation/navbar/navbar.module.scss
+++ b/components/UI/navigation/navbar/navbar.module.scss
@@ -65,10 +65,6 @@
   cursor: pointer;
   transition: 0.3s ease all;
 
-  &:hover .toggle-icon {
-    background: $color-blue;
-  }
-
   @include breakpoint('medium') {
     display: none;
   }
@@ -83,10 +79,5 @@
     border-radius: $border-radius;
     background: $color-blue-light;
     transition: 0.3s ease all;
-
-    &:hover {
-      background: $color-blue;
-    }
   }
-
 }
